# django_tsm

./: .env  .gitignore  db.sqlite3  manage.py  pyproject.toml
django_tsm/: api_info.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
github/: workflows
tasks/: reminders.py  signals.py  tasks.py  urls.py
tasks/api/: api_views.py  serializers.py
tasks/migrations/: 0001_initial.py  0002_tasks_deadline_tasks_user_delete_userstasks.py  0003_alter_tasks_user.py  0004_tasks_completed.py  0005_alter_tasks_difficulty.py  0006_alter_tasks_difficulty.py  0007_tasks_status.py
tasks/models/: __init__.py  task.py
users/: signals.py  urls.py
users/api/: api_views.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py
users/models/: __init__.py  custom_user.py  user_profile.py
users/utils/: damage_calculator.py  notification_utils.py
utils/: message_sender.py  models.py  static_text.py
